--- a/Tson.NET/Tson.NET.csproj
+++ b/Tson.NET/Tson.NET.csproj
@@ -14,6 +14,7 @@
     <Product>Tson.NET</Product>
     <Company>N/A</Company>
     <Copyright>MIT License</Copyright>
+    <Version>2.1.0</Version>
   </PropertyGroup>
 
 </Project>
