--- a/src/Tson.csproj
+++ b/src/Tson.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>3.0.1</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>3.0.2</Version>
     <Company />
     <Product />
     <Authors>Atilla Lonny</Authors>
@@ -13,8 +13,8 @@
     <RepositoryUrl>https://github.com/atillabyte/tson</RepositoryUrl>
     <PackageTags>tson</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>3.0.1.0</AssemblyVersion>
-    <FileVersion>3.0.1.0</FileVersion>
+    <AssemblyVersion>3.0.2.0</AssemblyVersion>
+    <FileVersion>3.0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
