--- a/src/Tson.csproj
+++ b/src/Tson.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>3.0.3</Version>
+    <Version>3.1.0</Version>
     <Company />
     <Product />
     <Authors>Atilla Lonny</Authors>
@@ -13,11 +13,12 @@
     <RepositoryUrl>https://github.com/atillabyte/tson</RepositoryUrl>
     <PackageTags>tson</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>3.0.3.0</AssemblyVersion>
-    <FileVersion>3.0.3.0</FileVersion>
+    <AssemblyVersion>3.1.0.0</AssemblyVersion>
+    <FileVersion>3.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="Superpower" Version="2.3.0" />
   </ItemGroup>
 
