--- a/src/Tson.csproj
+++ b/src/Tson.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>3.2.2</Version>
+    <Version>3.2.4</Version>
     <Company />
     <Product />
     <Authors>Atilla Lonny</Authors>
@@ -13,8 +13,9 @@
     <RepositoryUrl>https://github.com/atillabyte/tson</RepositoryUrl>
     <PackageTags>tson</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>3.2.2.0</AssemblyVersion>
-    <FileVersion>3.2.2.0</FileVersion>
+    <AssemblyVersion>3.2.4.0</AssemblyVersion>
+    <FileVersion>3.2.4.0</FileVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
